docs/v8.3/packages_api/ui/_index.md
+++
# -----------------------------------------------------------------------
# Do not edit this file. It is automatically generated by API Documenter.
# -----------------------------------------------------------------------
title = "@grafana/ui"
keywords = ["grafana","documentation","sdk","@grafana/ui"]
type = "docs"
disable_edit_link = true
+++

## @grafana/ui package

A library containing the different design components of the Grafana ecosystem.

## Classes

|  Class | Description |
|  --- | --- |
|  [BarGauge](./bargauge/) |  |
|  [BigValue](./bigvalue/) |  |
|  [Cascader](./cascader/) |  |
|  [ClickOutsideWrapper](./clickoutsidewrapper/) |  |
|  [ClipboardButton](./clipboardbutton/) |  |
|  [ErrorBoundary](./errorboundary/) |  |
|  [ErrorBoundaryAlert](./errorboundaryalert/) |  |
|  [Gauge](./gauge/) |  |
|  [Graph](./graph/) |  |
|  [GraphNG](./graphng/) | "Time as X" core component, expects ascending x |
|  [GraphSeriesToggler](./graphseriestoggler/) |  |
|  [JsonExplorer](./jsonexplorer/) |  JsonExplorer<!-- -->JsonExplorer allows you to render JSON objects in HTML with a \*\*collapsible\*\* navigation. |
|  [JSONFormatter](./jsonformatter/) |  |
|  [List](./list/) |  |
|  [LogMessageAnsi](./logmessageansi/) |  |
|  [ModalsProvider](./modalsprovider/) |  |
|  [Popover](./popover/) |  |
|  [PopoverController](./popovercontroller/) |  |
|  [QueryField](./queryfield/) | Renders an editor field. Pass initial value as initialQuery and listen to changes in props.onValueChanged. This component can only process strings. Internally it uses Slate Value. Implement props.onTypeahead to use suggestions, see PromQueryField.tsx as an example. |
|  [RefreshPicker](./refreshpicker/) |  |
|  [SelectValueEditor](./selectvalueeditor/) |  |
|  [SetInterval](./setinterval/) |  |
|  [StatsPicker](./statspicker/) |  |
|  [StringArrayEditor](./stringarrayeditor/) |  |
|  [UnitPicker](./unitpicker/) |  |
|  [UPlotConfigBuilder](./uplotconfigbuilder/) |  |
|  [VizRepeater](./vizrepeater/) |  |

## Enumerations

|  Enumeration | Description |
|  --- | --- |
|  [BarGaugeDisplayMode](./bargaugedisplaymode/) |  |
|  [BigValueColorMode](./bigvaluecolormode/) |  |
|  [BigValueGraphMode](./bigvaluegraphmode/) |  |
|  [BigValueJustifyMode](./bigvaluejustifymode/) |  |
|  [BigValueTextMode](./bigvaluetextmode/) | Options for how the value &amp; title are to be displayed |
|  [CompletionItemKind](./completionitemkind/) |  |
|  [EventsWithValidation](./eventswithvalidation/) |  |
|  [LegacyInputStatus](./legacyinputstatus/) |  |
|  [NodeGraphDataFrameFieldNames](./nodegraphdataframefieldnames/) |  |
|  [SeriesVisibilityChangeBehavior](./seriesvisibilitychangebehavior/) |  |

## Functions

|  Function | Description |
|  --- | --- |
|  [AlertingSettings({ alertmanagerDataSources, options, onOptionsChange, })](./alertingsettings/) |  |
|  [AsyncMultiSelect(props)](./asyncmultiselect/) |  |
|  [AsyncSelect(props)](./asyncselect/) |  |
|  [BracesPlugin()](./bracesplugin/) |  |
|  [buildScaleKey(config)](./buildscalekey/) |  |
|  [calculateFontSize(text, width, height, lineHeight, maxSize)](./calculatefontsize/) | <b><i>(BETA)</i></b> |
|  [ClearPlugin()](./clearplugin/) |  |
|  [ClipboardPlugin()](./clipboardplugin/) |  |
|  [convertOldAngularValueMapping(panel)](./convertoldangularvaluemapping/) |  |
|  [EmotionPerfTest()](./emotionperftest/) |  |
|  [EventsCanvas({ id, events, renderEventMarker, mapEventToXYCoords, config })](./eventscanvas/) |  |
|  [FadeTransition(props)](./fadetransition/) |  |
|  [FileDropzone({ options, children, readAs, onLoad, fileListRenderer })](./filedropzone/) |  |
|  [FileDropzoneDefaultChildren({ primaryText, secondaryText, })](./filedropzonedefaultchildren/) |  |
|  [FileListItem({ file: customFile, removeFile })](./filelistitem/) |  |
|  [Form({ defaultValues, onSubmit, validateOnMount, validateFieldsOnMount, children, validateOn, maxWidth, ...htmlProps })](./form/) |  |
|  [getFieldTypeIcon(field)](./getfieldtypeicon/) | Get the icon for a given field type |
|  [getScrollbarWidth()](./getscrollbarwidth/) |  |
|  [getTagColor(index)](./gettagcolor/) |  |
|  [getTagColorsFromName(name)](./gettagcolorsfromname/) | Returns tag badge background and border colors based on hashed tag name. |
|  [getTextColorForBackground(color)](./gettextcolorforbackground/) |  |
|  [IndentationPlugin()](./indentationplugin/) |  |
|  [measureText(text, fontSize)](./measuretext/) | <b><i>(BETA)</i></b> |
|  [Modal(props)](./modal/) |  |
|  [MultiSelect(props)](./multiselect/) |  |
|  [NewlinePlugin()](./newlineplugin/) |  |
|  [Portal(props)](./portal/) |  |
|  [preparePlotFrame(frames, dimFields)](./prepareplotframe/) |  |
|  [RadioButtonGroup({ options, value, onChange, disabled, disabledOptions, size, className, fullWidth, autoFocus, })](./radiobuttongroup/) |  |
|  [resetSelectStyles()](./resetselectstyles/) |  |
|  [RunnerPlugin({ handler })](./runnerplugin/) |  |
|  [Segment({ options, value, onChange, Component, className, allowCustomValue, allowEmptyValue, placeholder, disabled, inputMinWidth, inputPlaceholder, onExpandedChange, autofocus, ...rest })](./segment/) |  |
|  [SegmentAsync({ value, onChange, loadOptions, reloadOptionsOnChange, Component, className, allowCustomValue, allowEmptyValue, disabled, placeholder, inputMinWidth, inputPlaceholder, autofocus, onExpandedChange, noOptionMessageHandler, ...rest })](./segmentasync/) |  |
|  [SegmentInput({ value: initialValue, onChange, Component, className, placeholder, inputPlaceholder, disabled, autofocus, onExpandedChange, ...rest })](./segmentinput/) |  |
|  [Select(props)](./select/) |  |
|  [SelectionShortcutsPlugin()](./selectionshortcutsplugin/) |  |
|  [sharedSingleStatMigrationHandler(panel)](./sharedsinglestatmigrationhandler/) |  |
|  [sharedSingleStatPanelChangedHandler(panel, prevPluginId, prevOptions)](./sharedsinglestatpanelchangedhandler/) |  |
|  [SlatePrism(optsParam, prismLanguages)](./slateprism/) | A Slate plugin to highlight code syntax. |
|  [SlideOutTransition(props)](./slideouttransition/) |  |
|  [stylesFactory(stylesCreator)](./stylesfactory/) |  |
|  [SuggestionsPlugin({ onTypeahead, cleanText, onWillApplySuggestion, portalOrigin, })](./suggestionsplugin/) |  |
|  [TabbedContainer(props)](./tabbedcontainer/) |  |
|  [useStyles(getStyles)](./usestyles/) |  |
|  [useStyles2(getStyles)](./usestyles2/) |  |
|  [useTheme()](./usetheme/) |  |
|  [useTheme2()](./usetheme2/) |  |
|  [ValuePicker({ label, icon, options, onChange, variant, minWidth, size, isFullWidth, menuPlacement, })](./valuepicker/) |  |
|  [VizLegend({ items, displayMode, sortBy: sortKey, seriesVisibilityChangeBehavior, sortDesc, onLabelClick, onToggleSort, placement, className, itemRenderer, readonly, })](./vizlegend/) |  |
|  [withErrorBoundary(Component, errorBoundaryProps)](./witherrorboundary/) | HOC for wrapping a component in an error boundary. |

## Interfaces

|  Interface | Description |
|  --- | --- |
|  [BadgeProps](./badgeprops/) |  |
|  [CardContainerProps](./cardcontainerprops/) |  |
|  [CardProps](./cardprops/) |  |
|  [CascaderOption](./cascaderoption/) |  |
|  [CompletionItem](./completionitem/) |  |
|  [CompletionItemGroup](./completionitemgroup/) |  |
|  [ConfirmModalProps](./confirmmodalprops/) |  |
|  [ContextMenuProps](./contextmenuprops/) |  |
|  [CustomControlProps](./customcontrolprops/) |  |
|  [DatePickerProps](./datepickerprops/) |  |
|  [DatePickerWithInputProps](./datepickerwithinputprops/) |  |
|  [DropzoneFile](./dropzonefile/) |  |
|  [ErrorBoundaryAlertProps](./errorboundaryalertprops/) | Props for the ErrorBoundaryAlert component |
|  [FieldArrayApi](./fieldarrayapi/) |  |
|  [FileDropzoneProps](./filedropzoneprops/) |  |
|  [FileListItemProps](./filelistitemprops/) |  |
|  [GraphNGProps](./graphngprops/) |  |
|  [GraphSeriesTogglerAPI](./graphseriestogglerapi/) |  |
|  [LoadingPlaceholderProps](./loadingplaceholderprops/) |  |
|  [MultiSelectCommonProps](./multiselectcommonprops/) |  |
|  [PlotSelection](./plotselection/) |  |
|  [PluginSignatureBadgeProps](./pluginsignaturebadgeprops/) |  |
|  [SelectableOptGroup](./selectableoptgroup/) |  |
|  [SelectAsyncProps](./selectasyncprops/) |  |
|  [SelectBaseProps](./selectbaseprops/) |  |
|  [SelectCommonProps](./selectcommonprops/) |  |
|  [SelectContainerProps](./selectcontainerprops/) |  |
|  [SeriesTableProps](./seriestableprops/) |  |
|  [SeriesTableRowProps](./seriestablerowprops/) |  |
|  [SingleStatBaseOptions](./singlestatbaseoptions/) |  |
|  [SuggestionsState](./suggestionsstate/) |  |
|  [TabConfig](./tabconfig/) |  |
|  [TableSortByFieldState](./tablesortbyfieldstate/) |  |
|  [Themeable](./themeable/) |  |
|  [Themeable2](./themeable2/) |  |
|  [TimeRangePickerProps](./timerangepickerprops/) |  |
|  [Token](./token/) |  |
|  [TypeaheadInput](./typeaheadinput/) |  |
|  [TypeaheadOutput](./typeaheadoutput/) |  |
|  [ValidationEvents](./validationevents/) |  |
|  [ValidationRule](./validationrule/) |  |
|  [VizLayoutComponentType](./vizlayoutcomponenttype/) | <b><i>(BETA)</i></b> |
|  [VizLayoutLegendProps](./vizlayoutlegendprops/) | <b><i>(BETA)</i></b> |
|  [VizLayoutProps](./vizlayoutprops/) | <b><i>(BETA)</i></b> |
|  [VizLegendItem](./vizlegenditem/) |  |
|  [VizRepeaterRenderValueProps](./vizrepeaterrendervalueprops/) |  |

## Namespaces

|  Namespace | Description |
|  --- | --- |
|  [commonOptionsBuilder](./commonoptionsbuilder/) |  |
|  [DOMUtil](./domutil/) |  |
|  [Modal](./modal/) |  |
|  [RadioButtonGroup](./radiobuttongroup/) |  |
|  [ReactUtils](./reactutils/) |  |
|  [styleMixins](./stylemixins/) |  |
|  [VizLegend](./vizlegend/) |  |

## Variables

|  Variable | Description |
|  --- | --- |
|  [Alert](./alert/) |  |
|  [Badge](./badge/) |  |
|  [Button](./button/) |  |
|  [ButtonCascader](./buttoncascader/) |  |
|  [ButtonGroup](./buttongroup/) |  |
|  [ButtonSelect](./buttonselect/) |  |
|  [CallToActionCard](./calltoactioncard/) |  |
|  [Card](./card/) | Generic card component |
|  [CardContainer](./cardcontainer/) |  |
|  [CertificationKey](./certificationkey/) |  |
|  [Checkbox](./checkbox/) |  |
|  [CodeEditor](./codeeditor/) |  |
|  [CollapsableSection](./collapsablesection/) |  |
|  [Collapse](./collapse/) |  |
|  [ColorPicker](./colorpicker/) |  |
|  [colors](./colors/) |  |
|  [ConfirmButton](./confirmbutton/) |  |
|  [ConfirmModal](./confirmmodal/) |  |
|  [Container](./container/) |  |
|  [ContextMenu](./contextmenu/) |  |
|  [ControlledCollapse](./controlledcollapse/) |  |
|  [Counter](./counter/) |  |
|  [CustomScrollbar](./customscrollbar/) | Wraps component into <Scrollbars> component from <code>react-custom-scrollbars</code> |
|  [DataLinkInput](./datalinkinput/) |  |
|  [DataLinksContextMenu](./datalinkscontextmenu/) |  |
|  [DataLinksInlineEditor](./datalinksinlineeditor/) |  |
|  [DataSourceHttpSettings](./datasourcehttpsettings/) |  |
|  [DatePicker](./datepicker/) |  |
|  [DatePickerWithInput](./datepickerwithinput/) |  |
|  [DateTimePicker](./datetimepicker/) |  |
|  [defaultIntervals](./defaultintervals/) |  |
|  [DeleteButton](./deletebutton/) |  |
|  [Drawer](./drawer/) |  |
|  [DropdownIndicator](./dropdownindicator/) |  |
|  [EmptySearchResult](./emptysearchresult/) |  |
|  [ErrorWithStack](./errorwithstack/) |  |
|  [FeatureBadge](./featurebadge/) |  |
|  [FeatureInfoBox](./featureinfobox/) |  |
|  [Field](./field/) |  |
|  [FieldArray](./fieldarray/) |  |
|  [fieldMatchersUI](./fieldmatchersui/) |  |
|  [FieldSet](./fieldset/) |  |
|  [FieldValidationMessage](./fieldvalidationmessage/) |  |
|  [FileUpload](./fileupload/) |  |
|  [FilterInput](./filterinput/) |  |
|  [FilterPill](./filterpill/) |  |
|  [FormattedValueDisplay](./formattedvaluedisplay/) |  |
|  [FullWidthButtonContainer](./fullwidthbuttoncontainer/) |  |
|  [getAvailableIcons](./getavailableicons/) |  |
|  [getCardStyles](./getcardstyles/) |  |
|  [getFormStyles](./getformstyles/) |  |
|  [getInputStyles](./getinputstyles/) |  |
|  [getLogRowStyles](./getlogrowstyles/) |  |
|  [getSelectStyles](./getselectstyles/) |  |
|  [getStandardFieldConfigs](./getstandardfieldconfigs/) | Returns collection of common field config properties definitions |
|  [getTheme](./gettheme/) |  |
|  [graphTickFormatter](./graphtickformatter/) |  |
|  [graphTimeFormat](./graphtimeformat/) |  |
|  [GraphWithLegend](./graphwithlegend/) |  |
|  [hasValidationEvent](./hasvalidationevent/) |  |
|  [HorizontalGroup](./horizontalgroup/) |  |
|  [Icon](./icon/) |  |
|  [IconButton](./iconbutton/) |  |
|  [InfoBox](./infobox/) |  |
|  [InlineField](./inlinefield/) |  |
|  [InlineFieldRow](./inlinefieldrow/) |  |
|  [InlineFormLabel](./inlineformlabel/) |  |
|  [InlineLabel](./inlinelabel/) |  |
|  [InlineSegmentGroup](./inlinesegmentgroup/) | <b><i>(BETA)</i></b> |
|  [InlineSwitch](./inlineswitch/) |  |
|  [Input](./input/) |  |
|  [InputControl](./inputcontrol/) |  |
|  [Label](./label/) |  |
|  [LegacyForms](./legacyforms/) |  |
|  [Legend](./legend/) |  |
|  [LinkButton](./linkbutton/) |  |
|  [linkModelToContextMenuItems](./linkmodeltocontextmenuitems/) | Delays creating links until we need to open the ContextMenu |
|  [LoadingPlaceholder](./loadingplaceholder/) |  |
|  [LogLabels](./loglabels/) |  |
|  [LogRows](./logrows/) |  |
|  [makeFragment](./makefragment/) |  |
|  [makeValue](./makevalue/) |  |
|  [Marker](./marker/) |  |
|  [mockTheme](./mocktheme/) |  |
|  [mockThemeContext](./mockthemecontext/) |  |
|  [ModalRoot](./modalroot/) |  |
|  [ModalsController](./modalscontroller/) |  |
|  [ModalTabsHeader](./modaltabsheader/) |  |
|  [NumberValueEditor](./numbervalueeditor/) |  |
|  [Pagination](./pagination/) |  |
|  [PanelContextRoot](./panelcontextroot/) |  |
|  [PlotLegend](./plotlegend/) |  |
|  [PluginSignatureBadge](./pluginsignaturebadge/) |  |
|  [RangeSlider](./rangeslider/) | RichHistoryQueriesTab uses this Range Component |
|  [regexValidation](./regexvalidation/) |  |
|  [SCHEMA](./schema/) |  |
|  [SelectContainer](./selectcontainer/) |  |
|  [selectOptionInTest](./selectoptionintest/) |  |
|  [SeriesColorPicker](./seriescolorpicker/) |  |
|  [SeriesColorPickerPopover](./seriescolorpickerpopover/) |  |
|  [SeriesColorPickerPopoverWithTheme](./seriescolorpickerpopoverwiththeme/) |  |
|  [SeriesIcon](./seriesicon/) |  |
|  [SeriesTable](./seriestable/) |  |
|  [SeriesTableRow](./seriestablerow/) |  |
|  [sharedInputStyle](./sharedinputstyle/) |  |
|  [Slider](./slider/) |  |
|  [SliderValueEditor](./slidervalueeditor/) |  |
|  [sortedColors](./sortedcolors/) |  |
|  [Spinner](./spinner/) |  |
|  [StringValueEditor](./stringvalueeditor/) |  |
|  [Switch](./switch/) |  |
|  [Tab](./tab/) |  |
|  [TabContent](./tabcontent/) |  |
|  [Table](./table/) |  |
|  [TableInputCSV](./tableinputcsv/) |  |
|  [TabsBar](./tabsbar/) |  |
|  [Tag](./tag/) |  |
|  [TagList](./taglist/) |  |
|  [TagsInput](./tagsinput/) |  |
|  [TextArea](./textarea/) |  |
|  [ThemeContext](./themecontext/) |  |
|  [TimeOfDayPicker](./timeofdaypicker/) |  |
|  [TimeRangeInput](./timerangeinput/) |  |
|  [TimeRangePicker](./timerangepicker/) |  |
|  [TimeSeries](./timeseries/) |  |
|  [TimeZonePicker](./timezonepicker/) |  |
|  [TLSAuthSettings](./tlsauthsettings/) |  |
|  [ToolbarButton](./toolbarbutton/) |  |
|  [ToolbarButtonRow](./toolbarbuttonrow/) |  |
|  [Tooltip](./tooltip/) |  |
|  [UPLOT\_AXIS\_FONT\_SIZE](./uplot_axis_font_size/) |  |
|  [validate](./validate/) |  |
|  [VerticalGroup](./verticalgroup/) |  |
|  [VizLayout](./vizlayout/) | <b><i>(BETA)</i></b> |
|  [VizTooltip](./viztooltip/) |  |
|  [VizTooltipContainer](./viztooltipcontainer/) |  |
|  [WeekStartPicker](./weekstartpicker/) |  |
|  [WithContextMenu](./withcontextmenu/) |  |
|  [withTheme](./withtheme/) |  |
|  [XYCanvas](./xycanvas/) | Renders absolutely positioned element on top of the uPlot's plotting area (axes are not included!). Useful when you want to render some overlay with canvas-independent elements on top of the plot. |

## Type Aliases

|  Type Alias | Description |
|  --- | --- |
|  [ActionMeta](./actionmeta/) |  |
|  [AlertVariant](./alertvariant/) |  |
|  [BadgeColor](./badgecolor/) |  |
|  [ButtonProps](./buttonprops/) |  |
|  [ButtonVariant](./buttonvariant/) |  |
|  [CodeEditorMonacoOptions](./codeeditormonacooptions/) |  |
|  [ControlComponent](./controlcomponent/) |  |
|  [FormAPI](./formapi/) |  |
|  [FormInputSize](./forminputsize/) |  |
|  [IconButtonVariant](./iconbuttonvariant/) |  |
|  [IconName](./iconname/) |  |
|  [IconSize](./iconsize/) |  |
|  [IconType](./icontype/) |  |
|  [InputActionMeta](./inputactionmeta/) |  |
|  [Monaco](./monaco/) |  |
|  [MonacoEditor](./monacoeditor/) |  |
|  [OnTagClick](./ontagclick/) |  |
|  [PopoverContent](./popovercontent/) |  |
|  [Renderable](./renderable/) |  |
|  [RenderFunction](./renderfunction/) |  |
|  [ScrollbarPosition](./scrollbarposition/) |  |
|  [SelectOptions](./selectoptions/) |  |
|  [SelectValue](./selectvalue/) |  |

